<resources>
    <string name="app_name">SchoolScheduleApp</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_home">Today</string>
    <string name="title_notifications">Notifications</string>

    <string name="start_time_example">08:00 AM</string>
    <string name="course_example">MGT 101 - Android</string>
    <string name="room_example">Room 302</string>
    <string name="cancel">Cancel</string>
    <string name="add_assignment">+ Assignment</string>
    <string name="end_time_example">10.00 AM</string>
    <string name="arrow_icon_description">10.00 AM</string>
    <string name="assignments_headings">Assignments</string>
    <string name="checkList_title">CheckList Title1</string>
    <string name="note_from_checklist">Note From Checklist</string>
    <string name="title_settings">Settings</string>

    <string name="_12">12</string>
    <string name="_0">0%1$s</string>


    <!-- Preference Titles -->
    <string name="personal_settings_header">Personal Settings</string>
    <string name="classes_header">Classes Settings</string>
    <string name="app_settings_header">App Settings</string>

    <!-- Personal Preferences -->
    <string name="name">Your Name</string>
    <string name="email">Your Email</string>

    <!-- Classes Preferences -->
    <string name="classes">Classes</string>
    <string name="classes_summary">Manage your classes</string>

    <!-- App Preferences -->
    <string name="dark_mode_switch">Dark Mode</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="class_settings_title">Class Settings</string>
    <string name="floatingBtnText">Add</string>
    <string name="separation">-</string>
    <string name="addClassDialogTitle">Add a new Class</string>
    <string name="classCodeTextInput">Class code</string>
    <string name="addBtnText">Add Class</string>
    <string name="classNameTextInput">Class Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveChangesBtn">Save changes</string>
    <string name="editClassDialogTitle">Edit/Delete Class</string>
    <string name="assignments">Assignments</string>
    <string name="roomNameTextInput">Classroom</string>
    <string name="addAsignmentTextButton">+ Assignment</string>
    <string name="capstone_project">Capstone Project</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="assignmentName_hint">Assignment title</string>
    <string name="details">Details</string>
    <string name="select">Select class</string>
    <string name="add_assignment_btn">Add Assignment</string>
    <string name="checkBoxText">Set as priority</string>
    <string name="new_class_slot">New Class Slot</string>
    <string name="title_activity_google_firebase_auth">GoogleFirebaseAuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_classes_scheduled">Yay! No classes scheduled for this date.</string>
    <string name="completed_all_the_assignments">Yay! You\'ve completed all the assignments.</string>
    <string name="completed_all_the_prioritized_assignments">Yay! You\'ve completed all the prioritized assignments.</string>
    <string name="existing_slot">The selected time slot conflicts with an existing class slot. Please choose a different slot.</string>

    <string name="google_client_id">53599845427-cm626895kfifqdfkthtt29sve7vuepak.apps.googleusercontent.com</string>
    <string name="class_name">Class name</string>
    <string name="manage_class">Manage Class</string>
    <string name="is_repeating">Is Repeating</string>
</resources>