<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/personal_settings_header">

        <Preference
            app:icon="@drawable/outline_account_circle_24"
            app:key="user"
            app:title=""
            app:summary="User profile"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/classes_header">

        <Preference
            app:icon="@drawable/outline_library_books_24"
            app:key="classes"
            app:summary="@string/classes_summary"
            app:title="@string/classes" />

    </PreferenceCategory>

    <!--    <PreferenceCategory app:title="@string/app_settings_header">-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="dark_mode"-->
    <!--            app:title="@string/dark_mode_switch"-->
    <!--            app:icon="@drawable/outline_dark_mode_24"/>-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="allow_notifications"-->
    <!--            app:title="@string/allow_notifications"-->
    <!--            app:icon="@drawable/outline_notifications_active_24"/>-->

    <!--    </PreferenceCategory>-->

</PreferenceScreen>