<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewAddDialog"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/addClassDialogTitle"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/classCodeAddDialogInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/classCodeTextInput"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/classNameAddDialogInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/classNameTextInput"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/addClassBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/addNewClassCancelDialogBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/addNewClassAddDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addBtnText" />
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>